turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:10: error: value White is not a member of object java.awt.Color
  if (couleurSol == Color.White) {
                          ^LangtonsAnt:11: error: not found: value setCouleur
    setCouleur(Color.Black)
    ^LangtonsAnt:11: error: value Black is not a member of object java.awt.Color
    setCouleur(Color.Black)
                     ^LangtonsAnt:15: error: not found: value setCouelur
    setCouelur(Color.White)
    ^LangtonsAnt:15: error: value White is not a member of object java.awt.Color
    setCouelur(Color.White)
                     ^