turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c: Color) {
  setCouleurBrosse(c)
  
  baisseBrosse()
  leveBrosse()
}

def step() {
  var couleurSol:Color = getCouleurSol()
  
  if (couleurSol == Color.White) {
    setCouleur(Color.Black)
    
    droite(); avance()
  } else {
    setCouelur(Color.White)
    
    gauche(); avance()
  }
}